syntax = "proto3";

package api.margin.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/wyfcoding/financialtrading/go-api/margin/v1;marginv1";

// 保证金服务，提供保证金计算、管理、强制平仓等能力
service MarginService {
  // ==================== 保证金计算 ====================
  
  // 计算保证金要求
  rpc CalculateMargin(CalculateMarginRequest) returns (MarginCalculation);
  // 批量计算保证金
  rpc BatchCalculateMargin(BatchCalculateMarginRequest) returns (BatchCalculateMarginResponse);
  // 获取保证金要求
  rpc GetMarginRequirement(GetMarginRequirementRequest) returns (MarginRequirement);
  // 计算维持保证金
  rpc CalculateMaintenanceMargin(CalculateMaintenanceMarginRequest) returns (MaintenanceMarginResult);
  
  // ==================== 保证金账户管理 ====================
  
  // 获取保证金账户
  rpc GetMarginAccount(GetMarginAccountRequest) returns (MarginAccount);
  // 获取保证金账户列表
  rpc ListMarginAccounts(ListMarginAccountsRequest) returns (ListMarginAccountsResponse);
  
  // 存入保证金
  rpc DepositMargin(DepositMarginRequest) returns (MarginDeposit);
  // 提取保证金
  rpc WithdrawMargin(WithdrawMarginRequest) returns (MarginWithdrawal);
  // 冻结保证金
  rpc FreezeMargin(FreezeMarginRequest) returns (FreezeMarginResponse);
  // 解冻保证金
  rpc UnfreezeMargin(UnfreezeMarginRequest) returns (UnfreezeMarginResponse);
  
  // ==================== 保证金监控 ====================
  
  // 获取保证金比率
  rpc GetMarginRatio(GetMarginRatioRequest) returns (MarginRatio);
  // 检查保证金追缴
  rpc CheckMarginCall(CheckMarginCallRequest) returns (MarginCallStatus);
  // 获取保证金历史
  rpc GetMarginHistory(GetMarginHistoryRequest) returns (GetMarginHistoryResponse);
  
  // 订阅保证金告警
  rpc SubscribeMarginAlerts(SubscribeMarginAlertsRequest) returns (stream MarginAlert);
  
  // ==================== 强制平仓 ====================
  
  // 触发强制平仓检查
  rpc TriggerLiquidationCheck(TriggerLiquidationCheckRequest) returns (LiquidationCheckResult);
  // 执行强制平仓
  rpc ExecuteLiquidation(ExecuteLiquidationRequest) returns (LiquidationResult);
  // 获取平仓记录
  rpc GetLiquidationRecord(GetLiquidationRecordRequest) returns (LiquidationRecord);
  // 获取平仓记录列表
  rpc ListLiquidationRecords(ListLiquidationRecordsRequest) returns (ListLiquidationRecordsResponse);
  
  // ==================== 保证金调整 ====================
  
  // 调整保证金率
  rpc AdjustMarginRate(AdjustMarginRateRequest) returns (MarginRate);
  // 获取保证金率配置
  rpc GetMarginRateConfig(GetMarginRateConfigRequest) returns (MarginRateConfig);
  // 设置保证金率配置
  rpc SetMarginRateConfig(SetMarginRateConfigRequest) returns (MarginRateConfig);
  
  // ==================== 风险管理 ====================
  
  // 计算风险敞口
  rpc CalculateRiskExposure(CalculateRiskExposureRequest) returns (RiskExposure);
  // 获取风险指标
  rpc GetRiskMetrics(GetRiskMetricsRequest) returns (MarginRiskMetrics);
  // 压力测试
  rpc RunStressTest(RunStressTestRequest) returns (StressTestResult);
  
  // ==================== 分布式事务支持 ====================
  
  // TCC Try: 预冻结保证金
  rpc TccTryFreeze(TccMarginRequest) returns (TccMarginResponse);
  // TCC Confirm: 确认冻结
  rpc TccConfirmFreeze(TccMarginRequest) returns (TccMarginResponse);
  // TCC Cancel: 取消冻结
  rpc TccCancelFreeze(TccMarginRequest) returns (TccMarginResponse);
  
  // Saga: 扣除保证金
  rpc SagaDeductMargin(SagaMarginRequest) returns (SagaMarginResponse);
  // Saga: 恢复保证金
  rpc SagaRestoreMargin(SagaMarginRequest) returns (SagaMarginResponse);
}

// ==================== 枚举定义 ====================

enum MarginType {
  MARGIN_TYPE_UNSPECIFIED = 0;
  MARGIN_TYPE_INITIAL = 1;       // 初始保证金
  MARGIN_TYPE_MAINTENANCE = 2;   // 维持保证金
  MARGIN_TYPE_VARIATION = 3;     // 变动保证金
  MARGIN_TYPE_ADDITIONAL = 4;    // 追加保证金
}

enum MarginCallLevel {
  MARGIN_CALL_LEVEL_UNSPECIFIED = 0;
  MARGIN_CALL_LEVEL_SAFE = 1;           // 安全
  MARGIN_CALL_LEVEL_WARNING = 2;        // 警告
  MARGIN_CALL_LEVEL_MARGIN_CALL = 3;    // 追缴保证金
  MARGIN_CALL_LEVEL_CLOSE_OUT = 4;      // 强制平仓
}

enum LiquidationStatus {
  LIQUIDATION_STATUS_UNSPECIFIED = 0;
  LIQUIDATION_STATUS_PENDING = 1;       // 待执行
  LIQUIDATION_STATUS_PROCESSING = 2;    // 执行中
  LIQUIDATION_STATUS_COMPLETED = 3;     // 已完成
  LIQUIDATION_STATUS_PARTIAL = 4;       // 部分完成
  LIQUIDATION_STATUS_FAILED = 5;        // 失败
  LIQUIDATION_STATUS_CANCELLED = 6;     // 已取消
}

enum LiquidationReason {
  LIQUIDATION_REASON_UNSPECIFIED = 0;
  LIQUIDATION_REASON_MARGIN_CALL = 1;   // 保证金追缴
  LIQUIDATION_REASON_RISK_LIMIT = 2;    // 风险限额
  LIQUIDATION_REASON_MANUAL = 3;        // 手动平仓
  LIQUIDATION_REASON_EXPIRATION = 4;    // 到期平仓
  LIQUIDATION_REASON_SYSTEM = 5;        // 系统平仓
}

// ==================== 保证金计算消息 ====================

message CalculateMarginRequest {
  string user_id = 1;
  string account_id = 2;
  string symbol = 3;
  string side = 4;               // BUY, SELL
  string quantity = 5;           // Decimal string
  string price = 6;              // Decimal string
  int32 leverage = 7;            // 杠杆倍数
  MarginType margin_type = 8;
}

message MarginCalculation {
  string user_id = 1;
  string account_id = 2;
  string symbol = 3;
  
  string initial_margin = 4;         // 初始保证金
  string maintenance_margin = 5;     // 维持保证金
  string variation_margin = 6;       // 变动保证金
  
  string margin_rate = 7;            // 保证金率
  int32 leverage = 8;                // 杠杆倍数
  
  string notional_value = 9;         // 名义价值
  string position_value = 10;        // 持仓价值
  
  map<string, string> details = 11;  // 详细信息
  google.protobuf.Timestamp calculated_at = 12;
}

message BatchCalculateMarginRequest {
  repeated CalculateMarginRequest requests = 1;
}

message BatchCalculateMarginResponse {
  repeated MarginCalculation calculations = 1;
}

message GetMarginRequirementRequest {
  string symbol = 1;
  int32 leverage = 2;
}

message MarginRequirement {
  string symbol = 1;
  string initial_margin_rate = 2;    // 初始保证金率
  string maintenance_margin_rate = 3; // 维持保证金率
  int32 max_leverage = 4;            // 最大杠杆
  int32 default_leverage = 5;        // 默认杠杆
  string margin_currency = 6;        // 保证金币种
  bool is_cross_margin = 7;          // 是否全仓模式
  google.protobuf.Timestamp updated_at = 8;
}

message CalculateMaintenanceMarginRequest {
  string user_id = 1;
  string account_id = 2;
  repeated PositionInfo positions = 3;
}

message PositionInfo {
  string symbol = 1;
  string side = 2;
  string quantity = 3;
  string entry_price = 4;
  string current_price = 5;
  string unrealized_pnl = 6;
}

message MaintenanceMarginResult {
  string user_id = 1;
  string account_id = 2;
  string total_maintenance_margin = 3;
  map<string, string> position_margins = 4;
  google.protobuf.Timestamp calculated_at = 5;
}

// ==================== 保证金账户消息 ====================

message MarginAccount {
  string account_id = 1;
  string user_id = 2;
  string currency = 3;
  
  string total_equity = 4;           // 总权益
  string total_margin = 5;           // 总保证金
  string available_margin = 6;       // 可用保证金
  string frozen_margin = 7;          // 冻结保证金
  string used_margin = 8;            // 已用保证金
  
  string margin_balance = 9;         // 保证金余额
  string margin_level = 10;          // 保证金水平
  MarginCallLevel margin_call_level = 11;
  
  string unrealized_pnl = 12;        // 未实现盈亏
  string realized_pnl = 13;          // 已实现盈亏
  
  int32 leverage = 14;               // 当前杠杆
  string risk_ratio = 15;            // 风险比率
  
  bool is_liquidating = 16;          // 是否正在平仓
  google.protobuf.Timestamp last_updated = 17;
  google.protobuf.Timestamp created_at = 18;
}

message GetMarginAccountRequest {
  string account_id = 1;
  string user_id = 2;
}

message ListMarginAccountsRequest {
  string user_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message ListMarginAccountsResponse {
  repeated MarginAccount accounts = 1;
  int32 total = 2;
}

// ==================== 保证金操作消息 ====================

message DepositMarginRequest {
  string account_id = 1;
  string user_id = 2;
  string amount = 3;
  string currency = 4;
  string source = 5;                 // 来源账户
  string transaction_id = 6;
}

message MarginDeposit {
  string deposit_id = 1;
  string account_id = 2;
  string amount = 3;
  string currency = 4;
  string status = 5;
  google.protobuf.Timestamp deposited_at = 6;
}

message WithdrawMarginRequest {
  string account_id = 1;
  string user_id = 2;
  string amount = 3;
  string currency = 4;
  string destination = 5;            // 目标账户
}

message MarginWithdrawal {
  string withdrawal_id = 1;
  string account_id = 2;
  string amount = 3;
  string currency = 4;
  string status = 5;
  google.protobuf.Timestamp withdrawn_at = 6;
}

message FreezeMarginRequest {
  string account_id = 1;
  string user_id = 2;
  string amount = 3;
  string currency = 4;
  string order_id = 5;               // 关联订单
  string reason = 6;
}

message FreezeMarginResponse {
  bool success = 1;
  string frozen_amount = 2;
  string available_margin = 3;
  string message = 4;
}

message UnfreezeMarginRequest {
  string account_id = 1;
  string user_id = 2;
  string amount = 3;
  string currency = 4;
  string order_id = 5;
  string reason = 6;
}

message UnfreezeMarginResponse {
  bool success = 1;
  string unfrozen_amount = 2;
  string available_margin = 3;
  string message = 4;
}

// ==================== 保证金监控消息 ====================

message GetMarginRatioRequest {
  string account_id = 1;
  string user_id = 2;
}

message MarginRatio {
  string account_id = 1;
  string user_id = 2;
  
  string margin_ratio = 1;           // 保证金比率
  string margin_level = 2;           // 保证金水平
  MarginCallLevel level = 3;
  
  string equity = 4;                 // 权益
  string used_margin = 5;            // 已用保证金
  string available_margin = 6;       // 可用保证金
  string maintenance_margin = 7;     // 维持保证金
  
  string margin_call_threshold = 8;  // 追缴阈值
  string liquidation_threshold = 9;  // 平仓阈值
  
  double distance_to_margin_call = 10;   // 距离追缴的距离
  double distance_to_liquidation = 11;   // 距离平仓的距离
  
  google.protobuf.Timestamp calculated_at = 12;
}

message CheckMarginCallRequest {
  string account_id = 1;
  string user_id = 2;
}

message MarginCallStatus {
  string account_id = 1;
  bool needs_margin_call = 2;        // 是否需要追缴
  string margin_call_amount = 3;     // 追缴金额
  string deadline = 4;               // 截止时间
  
  MarginCallLevel current_level = 5;
  MarginCallLevel previous_level = 6;
  
  repeated string warnings = 7;
  repeated string recommendations = 8;
  
  google.protobuf.Timestamp checked_at = 9;
}

message GetMarginHistoryRequest {
  string account_id = 1;
  string user_id = 2;
  google.protobuf.Timestamp start_time = 3;
  google.protobuf.Timestamp end_time = 4;
  int32 page = 5;
  int32 page_size = 6;
}

message GetMarginHistoryResponse {
  repeated MarginHistoryRecord records = 1;
  int32 total = 2;
}

message MarginHistoryRecord {
  string record_id = 1;
  string account_id = 2;
  string type = 3;                   // DEPOSIT, WITHDRAW, FREEZE, UNFREEZE, PROFIT, LOSS
  string amount = 4;
  string balance_after = 5;
  string description = 6;
  string reference_id = 7;           // 关联ID
  google.protobuf.Timestamp created_at = 8;
}

message SubscribeMarginAlertsRequest {
  string user_id = 1;
  repeated string account_ids = 2;
  MarginCallLevel min_level = 3;     // 最低告警级别
}

message MarginAlert {
  string alert_id = 1;
  string user_id = 2;
  string account_id = 3;
  MarginCallLevel level = 4;
  string message = 5;
  string margin_ratio = 6;
  string margin_call_amount = 7;
  string deadline = 8;
  repeated string actions = 9;       // 建议操作
  google.protobuf.Timestamp triggered_at = 10;
}

// ==================== 强制平仓消息 ====================

message TriggerLiquidationCheckRequest {
  string account_id = 1;
  string user_id = 2;
}

message LiquidationCheckResult {
  string account_id = 1;
  bool needs_liquidation = 2;
  LiquidationReason reason = 3;
  string liquidation_amount = 4;
  repeated PositionToLiquidate positions = 5;
  google.protobuf.Timestamp checked_at = 6;
}

message PositionToLiquidate {
  string position_id = 1;
  string symbol = 2;
  string side = 3;
  string quantity = 4;
  string current_price = 5;
  string estimated_pnl = 6;
  int32 priority = 7;                // 平仓优先级
}

message ExecuteLiquidationRequest {
  string account_id = 1;
  string user_id = 2;
  LiquidationReason reason = 3;
  repeated PositionToLiquidate positions = 4;
  string triggered_by = 5;           // 触发者
}

message LiquidationResult {
  string liquidation_id = 1;
  string account_id = 2;
  LiquidationStatus status = 3;
  
  repeated LiquidatedPosition positions = 4;
  
  string total_quantity = 5;
  string total_value = 6;
  string total_pnl = 7;
  string remaining_margin = 8;
  
  google.protobuf.Timestamp started_at = 9;
  google.protobuf.Timestamp completed_at = 10;
}

message LiquidatedPosition {
  string position_id = 1;
  string symbol = 2;
  string side = 3;
  string quantity = 4;
  string price = 5;
  string pnl = 6;
  string fee = 7;
  google.protobuf.Timestamp liquidated_at = 8;
}

message GetLiquidationRecordRequest {
  string liquidation_id = 1;
}

message LiquidationRecord {
  string liquidation_id = 1;
  string account_id = 2;
  string user_id = 3;
  LiquidationStatus status = 4;
  LiquidationReason reason = 5;
  
  string margin_before = 6;
  string margin_after = 7;
  string margin_ratio_before = 8;
  string margin_ratio_after = 9;
  
  repeated LiquidatedPosition positions = 10;
  
  string triggered_by = 11;
  string approved_by = 12;
  
  google.protobuf.Timestamp triggered_at = 13;
  google.protobuf.Timestamp started_at = 14;
  google.protobuf.Timestamp completed_at = 15;
}

message ListLiquidationRecordsRequest {
  string user_id = 1;
  string account_id = 2;
  LiquidationStatus status = 3;
  google.protobuf.Timestamp start_time = 4;
  google.protobuf.Timestamp end_time = 5;
  int32 page = 6;
  int32 page_size = 7;
}

message ListLiquidationRecordsResponse {
  repeated LiquidationRecord records = 1;
  int32 total = 2;
}

// ==================== 保证金率配置消息 ====================

message AdjustMarginRateRequest {
  string symbol = 1;
  string initial_margin_rate = 2;
  string maintenance_margin_rate = 3;
  int32 max_leverage = 4;
  string reason = 5;
  string adjusted_by = 6;
}

message MarginRate {
  string symbol = 1;
  string initial_margin_rate = 2;
  string maintenance_margin_rate = 3;
  int32 max_leverage = 4;
  int32 default_leverage = 5;
  string margin_currency = 6;
  bool is_active = 7;
  google.protobuf.Timestamp effective_from = 8;
  google.protobuf.Timestamp effective_until = 9;
}

message GetMarginRateConfigRequest {
  string symbol = 1;
}

message MarginRateConfig {
  string symbol = 1;
  string base_initial_rate = 2;
  string base_maintenance_rate = 3;
  
  repeated TieredMarginRate tiers = 4;   // 分层保证金率
  
  map<string, string> volatility_multipliers = 5;  // 波动率乘数
  map<string, string> position_size_multipliers = 6; // 持仓规模乘数
  
  bool dynamic_adjustment_enabled = 7;
  string adjustment_formula = 8;
  
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

message TieredMarginRate {
  string min_position_value = 1;
  string max_position_value = 2;
  string initial_rate = 3;
  string maintenance_rate = 4;
}

message SetMarginRateConfigRequest {
  string symbol = 1;
  string base_initial_rate = 2;
  string base_maintenance_rate = 3;
  repeated TieredMarginRate tiers = 4;
  bool dynamic_adjustment_enabled = 5;
  string adjustment_formula = 6;
}

// ==================== 风险管理消息 ====================

message CalculateRiskExposureRequest {
  string account_id = 1;
  string user_id = 2;
}

message RiskExposure {
  string account_id = 1;
  string user_id = 2;
  
  string total_exposure = 3;         // 总敞口
  string long_exposure = 4;          // 多头敞口
  string short_exposure = 5;         // 空头敞口
  string net_exposure = 6;           // 净敞口
  
  string gross_exposure = 7;         // 总敞口（绝对值）
  string exposure_ratio = 8;         // 敞口比率
  
  map<string, string> symbol_exposures = 9;  // 各品种敞口
  
  string var_95 = 10;                // 95% VaR
  string var_99 = 11;                // 99% VaR
  string expected_shortfall = 12;    // 预期亏损
  
  google.protobuf.Timestamp calculated_at = 13;
}

message GetRiskMetricsRequest {
  string account_id = 1;
  string user_id = 2;
}

message MarginRiskMetrics {
  string account_id = 1;
  string user_id = 2;
  
  string margin_ratio = 1;
  string leverage_ratio = 2;
  string concentration_risk = 3;     // 集中度风险
  string correlation_risk = 4;       // 相关性风险
  string volatility_risk = 5;        // 波动率风险
  string liquidity_risk = 6;         // 流动性风险
  
  string overall_risk_score = 7;     // 综合风险评分
  string risk_level = 8;             // 风险等级
  
  repeated RiskFactor factors = 9;
  
  google.protobuf.Timestamp calculated_at = 10;
}

message RiskFactor {
  string name = 1;
  string value = 2;
  string weight = 3;
  string contribution = 4;
  string description = 5;
}

message RunStressTestRequest {
  string account_id = 1;
  string user_id = 2;
  string scenario = 3;               // 场景名称
  repeated ScenarioParameter parameters = 4;
}

message ScenarioParameter {
  string name = 1;
  string value = 2;
}

message StressTestResult {
  string account_id = 1;
  string scenario = 2;
  
  string margin_before = 3;
  string margin_after = 4;
  string margin_change = 5;
  
  string equity_before = 6;
  string equity_after = 7;
  string equity_change = 8;
  
  string pnl_impact = 9;
  bool would_liquidate = 10;
  
  repeated PositionImpact position_impacts = 11;
  
  google.protobuf.Timestamp tested_at = 12;
}

message PositionImpact {
  string symbol = 1;
  string quantity = 2;
  string price_before = 3;
  string price_after = 4;
  string pnl_impact = 5;
}

// ==================== 分布式事务消息 ====================

message TccMarginRequest {
  string user_id = 1;
  string account_id = 2;
  string amount = 3;
  string currency = 4;
  string order_id = 5;
  string reason = 6;
}

message TccMarginResponse {
  bool success = 1;
  string message = 2;
  string frozen_amount = 3;
}

message SagaMarginRequest {
  string user_id = 1;
  string account_id = 2;
  string amount = 3;
  string currency = 4;
  string trade_id = 5;
  string reason = 6;
}

message SagaMarginResponse {
  bool success = 1;
  string message = 2;
}
